Added login page Added UserAccounts service db schema entities for the entity framework to create the UserAccounts schema, created the first migration Added Common Service with some shared classes that are useful for database migrations

--- a/application_code/src/Services/Project.Tech.Shop.Web.Services.Migrations.Startup/appsettings.json
+++ b/application_code/src/Services/Project.Tech.Shop.Web.Services.Migrations.Startup/appsettings.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=dev-;Port=5432;User Id=postgres;Password=X1B2#WXYZ123a;"
+    "DefaultConnection": "Server=localhost;Database=dev-tech-shop;Port=5432;User Id=postgres;Password=X1B2#WXYZ123a;"
   }
 }
