--- a/application_code/src/Host Applications/Project.Tech.Shop.Web/Project.Tech.Shop.Web.csproj
+++ b/application_code/src/Host Applications/Project.Tech.Shop.Web/Project.Tech.Shop.Web.csproj
@@ -10,7 +10,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.2.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Infastructure\Options\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Services\Project.Tech.Shop.Services.Common\Project.Tech.Shop.Services.Common.csproj" />
+    <ProjectReference Include="..\..\Services\Project.Tech.Shop.Services.Products\Project.Tech.Shop.Services.Products.csproj" />
+    <ProjectReference Include="..\..\Services\Project.Tech.Shop.Services.Transactions\Project.Tech.Shop.Services.Transactions.csproj" />
+    <ProjectReference Include="..\..\Services\Project.Tech.Shop.Services.UsersAccounts\Project.Tech.Shop.Services.UsersAccounts.csproj" />
   </ItemGroup>
 
 </Project>
