--- a/application_code/src/Services/Project.Tech.Shop.Services.Common/Project.Tech.Shop.Services.Common.csproj
+++ b/application_code/src/Services/Project.Tech.Shop.Services.Common/Project.Tech.Shop.Services.Common.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CSharpFunctionalExtensions" Version="2.41.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.18" />
+  </ItemGroup>
+
 </Project>
