--- a/application_code/src/Host Applications/Project.Tech.Shop.Web/Project.Tech.Shop.Web.csproj
+++ b/application_code/src/Host Applications/Project.Tech.Shop.Web/Project.Tech.Shop.Web.csproj
@@ -10,12 +10,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.18" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Infastructure\Options\" />
+    <Folder Include="services\" />
   </ItemGroup>
 
   <ItemGroup>
