--- a/application_code/src/Host Applications/Project.Tech.Shop.Web/appsettings.Development.json
+++ b/application_code/src/Host Applications/Project.Tech.Shop.Web/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=dev-tech-shop;Port=5432;User Id=dts-postgres;Password=X1B2#WXYZ123a;"
   }
 }
