Added Metrics and healthcheck along with logs enrichment now a log file will be created locally docker-compose now works but the database created within it does not work - will come back to that Promethus is working Zipkin and seq are not

--- a/application_code/src/Host Applications/Project.Tech.Shop.Web/Dockerfile
+++ b/application_code/src/Host Applications/Project.Tech.Shop.Web/Dockerfile
@@ -1,23 +1,31 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
+# Use official .NET runtime image as the base image
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
+# Use official .NET SDK image to build the application
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["src/Host Applications/Project.Tech.Shop.Web/Project.Tech.Shop.Web.csproj", "src/Host Applications/Project.Tech.Shop.Web/"]
-RUN dotnet restore "./src/Host Applications/Project.Tech.Shop.Web/Project.Tech.Shop.Web.csproj"
+
+# Ensure these paths are relative to the context specified in docker-compose.yml or the docker build command
+COPY ["Host Applications/Project.Tech.Shop.Web/Project.Tech.Shop.Web.csproj", "Host Applications/Project.Tech.Shop.Web/"]
+COPY ["Services/Project.Tech.Shop.Services.Common/Project.Tech.Shop.Services.Common.csproj", "Services/Project.Tech.Shop.Services.Common/"]
+COPY ["Services/Project.Tech.Shop.Services.Products/Project.Tech.Shop.Services.Products.csproj", "Services/Project.Tech.Shop.Services.Products/"]
+COPY ["Services/Project.Tech.Shop.Services.Transactions/Project.Tech.Shop.Services.Transactions.csproj", "Services/Project.Tech.Shop.Services.Transactions/"]
+COPY ["Services/Project.Tech.Shop.Services.UsersAccounts/Project.Tech.Shop.Services.UsersAccounts.csproj", "Services/Project.Tech.Shop.Services.UsersAccounts/"]
+
+RUN dotnet restore "Host Applications/Project.Tech.Shop.Web/Project.Tech.Shop.Web.csproj"
 COPY . .
-WORKDIR "/src/src/Host Applications/Project.Tech.Shop.Web"
-RUN dotnet build "./Project.Tech.Shop.Web.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/Host Applications/Project.Tech.Shop.Web"
+RUN dotnet build "Project.Tech.Shop.Web.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
+# Publish the application to /app/publish
 FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./Project.Tech.Shop.Web.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "Project.Tech.Shop.Web.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
+# Final stage/image
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
