--- a/application_code/src/Host Applications/Project.Tech.Shop.Web/appsettings.json
+++ b/application_code/src/Host Applications/Project.Tech.Shop.Web/appsettings.json
@@ -1,9 +1,27 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/tech-shop-shop-web-log.txt",
+          "RollingInterval": "Day",
+          "RetainedFileTimeLimit": 3,
+          "OutputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] [{SourceContext}] {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithOpenTelemetry" ]
+  },
+  "SystemConfiguration": {
+    "SystemName": "The Project Tech Shop",
+    "SubSystemName": "Web App",
+    "VersionTag": "v1"
   },
   "AllowedHosts": "*"
 }
