--- a/application_code/src/Services/Project.Tech.Shop.Web.Services.Migrations.Startup/Project.Tech.Shop.Services.Migrations.Startup.csproj
+++ b/application_code/src/Services/Project.Tech.Shop.Web.Services.Migrations.Startup/Project.Tech.Shop.Services.Migrations.Startup.csproj
@@ -5,6 +5,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,6 +18,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,8 +28,16 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Project.Tech.Shop.Services.Products\Project.Tech.Shop.Services.Products.csproj" />
-    <ProjectReference Include="..\Project.Tech.Shop.Services.Transactions\Project.Tech.Shop.Services.Transactions.csproj" />
     <ProjectReference Include="..\Project.Tech.Shop.Services.UsersAccounts\Project.Tech.Shop.Services.UsersAccounts.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.Development.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
