--- a/application_code/src/Host Applications/Project.Tech.Shop.Web/Project.Tech.Shop.Web.csproj
+++ b/application_code/src/Host Applications/Project.Tech.Shop.Web/Project.Tech.Shop.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,6 +7,7 @@
     <UserSecretsId>6d411ed5-4d05-4b10-8bc7-091333e3eb09</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
+    <StartupObject></StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
@@ -30,7 +31,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Services\Project.Tech.Shop.Services.Common\Project.Tech.Shop.Services.Common.csproj" />
     <ProjectReference Include="..\..\Services\Project.Tech.Shop.Services.Products\Project.Tech.Shop.Services.Products.csproj" />
-    <ProjectReference Include="..\..\Services\Project.Tech.Shop.Services.Transactions\Project.Tech.Shop.Services.Transactions.csproj" />
     <ProjectReference Include="..\..\Services\Project.Tech.Shop.Services.UsersAccounts\Project.Tech.Shop.Services.UsersAccounts.csproj" />
   </ItemGroup>
 
