--- a/application_code/src/Services/Project.Tech.Shop.Web.Services.Migrations.Startup/appsettings.json
+++ b/application_code/src/Services/Project.Tech.Shop.Web.Services.Migrations.Startup/appsettings.json
@@ -6,7 +6,10 @@
       "Microsoft": "Information"
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=dev-tech-shop;Port=5432;User Id=dts-postgres;Password=X1B2#WXYZ123a;"
-  }
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=localhost;Database=dev-tech-shop;Port=5432;User Id=dts-postgres;Password=X1B2#WXYZ123a;"
+  //}
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Host=postgres;Port=5432;Database=test-tech-shop;Username=techshopuser;Password=techshoppassword"
+  //}
 }
