Added admin controls Added logo Made adjustments to developer resources to allow docker-compose to work properly Added pages to support all the admin controls Added ability to edit profile info

--- a/application_code/src/Host Applications/Project.Tech.Shop.Web/Project.Tech.Shop.Web.csproj
+++ b/application_code/src/Host Applications/Project.Tech.Shop.Web/Project.Tech.Shop.Web.csproj
@@ -34,4 +34,8 @@
     <ProjectReference Include="..\..\Services\Project.Tech.Shop.Services.UsersAccounts\Project.Tech.Shop.Services.UsersAccounts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
